[project]
name = "ea-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "typer>=0.12.5",
    "rich>=13.8.1",
    "polars>=1.7.1",
    "python-dotenv>=1.0.1",
    "fastexcel>=0.11.6",
    "xlsxwriter>=3.2.0",
]
